Jenkins file fix